tests/parser/define-class.10.bad.error
error: Malformed class definition
  --> test:4:15
   |
 4 |  (define-class ((C) :a))
   |                 ^^^ unnecessary parentheses
help: remove unnecessary parentheses
 4 | (define-class (C :a))
   |                -
